dnl
dnl <Copyright = "jasone">
dnl <License>
dnl
dnl Process this file with autoconf to produce a configure script.
AC_INIT(libstash.h.in)
AC_CONFIG_HEADER(libstash.h)

dnl Check for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PATH_PROG(AR, ar, , $PATH)
AC_PATH_PROG(PERL, perl, , $PATH)
AC_PATH_PROG(CHMOD, chmod, , $PATH)
AC_PATH_PROG(BASENAME, basename, , $PATH)
AC_PATH_PROG(DIFF, diff, , $PATH)
AC_PATH_PROG(CAT, cat, , $PATH)
AC_PATH_PROG(ETAGS, etags, , $PATH)
dnl AC_CHECK_PROG(MAKE, make, , $PATH,
dnl  AC_CHECK_PROG(MAKE, gmake, , $PATH,
dnl    AC_MSG_ERROR(Cannot find GNU make anywhere)))

dnl Check for libraries.
AC_CHECK_LIB(pthread, pthread_create, ,
AC_CHECK_LIB(c_r, pthread_create,
  AC_DEFINE(_THREAD_SAFE)
  LIBS="-pthread $LIBS"), AC_MSG_ERROR(Cannot find pthreads anywhere))

dnl Define preprocessor macros.
AC_DEFINE(_REENTRANT)
AC_DEFINE(_CW_PEDANTIC) dnl XXX Need to make this optional.

dnl Check for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h, , AC_MSG_ERROR(Cannot build without unistd.h))
AC_CHECK_HEADERS(pthread.h, , AC_MSG_ERROR(Cannot build without pthread.h))

dnl Check for typedefs, structures, and compiler characteristics.
dnl AC_C_BIGENDIAN

AC_CHECK_SIZEOF(signed char, 1)
AC_CHECK_SIZEOF(unsigned char, 1)
AC_CHECK_SIZEOF(signed short, 2)
AC_CHECK_SIZEOF(unsigned short, 2)
AC_CHECK_SIZEOF(int, 4) dnl defines SIZEOF_INT
AC_CHECK_SIZEOF(unsigned, 4)
AC_CHECK_SIZEOF(long, 4)
AC_CHECK_SIZEOF(unsigned long, 4)
AC_CHECK_SIZEOF(long long, 4)
AC_CHECK_SIZEOF(unsigned long long, 4)
AC_CHECK_SIZEOF(float, 4)
AC_CHECK_SIZEOF(double, 8)
AC_CHECK_SIZEOF(long double, 12)
AC_CHECK_SIZEOF(int *, 4) dnl defines SIZEOF_INT_P

dnl Check for system services.
AC_SYS_LONG_FILE_NAMES

dnl AC_MSG_RESULT(Extra libraries to link in: $LIBS)
dnl AC_MSG_RESULT(Defines: ${DEFS})

dnl Create @DIRLIST@.
dnl DIRLIST=\
dnl "include \
dnl src \
dnl test \
dnl obj/stat_dbg \
dnl obj/shar_dbg \
dnl obj/stat_opt \
dnl obj/shar_opt \
dnl obj/stat_prof \
dnl obj/shar_prof"

dnl AC_SUBST(DIRLIST)dnl

dnl Process the following files.
AC_OUTPUT(Makefile \
bin/pmerge \
bin/pstub)
dnl Makefile.common \
