dnl
dnl <Copyright = "jasone">
dnl <License>
dnl
dnl Process this file with autoconf to produce a configure script.
AC_INIT(libhungry.h.in)
AC_CONFIG_HEADER(libhungry.h)

dnl Use libtool
dnl AM_DISABLE_SHARED
AM_PROG_LIBTOOL

dnl Check for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_MAKE_SET
dnl AC_PROG_RANLIB
AC_CHECK_PROG(FLEX, flex, /usr/bin/flex, $PATH)
AC_CHECK_PROG(BISON, bison, /usr/bin/bison, $PATH)
AC_CHECK_PROG(AR, ar, /usr/bin/ar, $PATH)
AC_CHECK_PROG(PERL, perl, /usr/local/bin/perl, $PATH)
AC_CHECK_PROG(CHMOD, chmod, /bin/chmod, $PATH)
AC_CHECK_PROG(BASENAME, basename, /usr/bin/basename, $PATH)
AC_CHECK_PROG(DIFF, diff, /usr/bin/diff, $PATH)
AC_CHECK_PROG(CAT, cat, /bin/cat, $PATH)
AC_CHECK_PROG(MAKE, make, /usr/local/bin/make, $PATH)
AC_CHECK_PROG(ETAGS, etags, /space/local/bin/etags, $PATH)

dnl Check for libraries.
AC_CHECK_LIB(pthread, pthread_create, ,
AC_CHECK_LIB(c_r, pthread_create,
  AC_DEFINE(_THREAD_SAFE)
  LIBS="-pthread $LIBS"), AC_MSG_ERROR(Cannot find pthreads anywhere))

dnl Define preprocessor macros.
AC_DEFINE(_REENTRANT)
AC_DEFINE(_CW_PEDANTIC) dnl XXX Need to make this optional.

dnl Check for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h, , AC_MSG_ERROR(Cannot build without unistd.h))
AC_CHECK_HEADERS(pthread.h, , AC_MSG_ERROR(Cannot build without pthread.h))

dnl Check for typedefs, structures, and compiler characteristics.
dnl AC_C_BIGENDIAN

AC_CHECK_SIZEOF(signed char, 1)
AC_CHECK_SIZEOF(unsigned char, 1)
AC_CHECK_SIZEOF(signed short, 2)
AC_CHECK_SIZEOF(unsigned short, 2)
AC_CHECK_SIZEOF(int, 4) dnl defines SIZEOF_INT
AC_CHECK_SIZEOF(unsigned, 4)
AC_CHECK_SIZEOF(long, 4)
AC_CHECK_SIZEOF(unsigned long, 4)
AC_CHECK_SIZEOF(long long, 4)
AC_CHECK_SIZEOF(unsigned long long, 4)
AC_CHECK_SIZEOF(float, 4)
AC_CHECK_SIZEOF(double, 8)
AC_CHECK_SIZEOF(long double, 12)
AC_CHECK_SIZEOF(int *, 4) dnl defines SIZEOF_INT_P

dnl Check for system services.
AC_SYS_LONG_FILE_NAMES

dnl AC_MSG_RESULT(Extra libraries to link in: $LIBS)
dnl AC_MSG_RESULT(Defines: ${DEFS})

dnl Create @DIRLIST@.
DIRLIST=\
"include \
src \
test"

AC_SUBST(DIRLIST)dnl

dnl Process the following files.
AC_OUTPUT(Makefile \
Makefile.common \
bin/pmerge \
bin/pstub)
